<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/auth_login"
    tools:context=".activity.RegActivity">

    <TextView
        android:id="@+id/label_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/create_account"
        android:textColor="@color/grey_blue"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_user_image_add"
        app:civ_border_color="@color/grey_blue"
        app:civ_border_width="2dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        app:boxStrokeColor="#213944"
        app:hintTextColor="@color/grey_blue"
        app:counterEnabled="true"
        app:counterMaxLength="15">

        <EditText
            android:id="@+id/userName"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints="no"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#164863"
            android:textColorHighlight="#164863"
            android:textColorHint="#546E7A"
            android:textColorLink="#164863" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        app:boxStrokeColor="#213944"
        app:hintTextColor="@color/grey_blue"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:layout_marginTop="4dp">

        <EditText
            android:id="@+id/userEMail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/open_sans"
            android:hint="@string/enter_e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#164863"
            android:textColorHint="#546E7A"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        app:boxStrokeColor="#213944"
        app:hintTextColor="@color/grey_blue"
        app:counterEnabled="true"
        app:counterMaxLength="18"
        android:layout_marginTop="4dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleContentDescription="Toggle password visibility">

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#164863"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        app:boxStrokeColor="#213944"
        app:hintTextColor="@color/grey_blue"
        app:counterEnabled="true"
        app:counterMaxLength="18"
        android:layout_marginTop="4dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleContentDescription="Toggle password visibility">

        <EditText
            android:id="@+id/confirmUserPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#164863"
            android:textColorHighlight="#164863"
            android:textColorHint="#546E7A"
            android:textColorLink="#164863" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reg_progress_bar"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/grey_blue"
        android:text="@string/sign_up"
        android:textColor="#DDF2FD"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_link_to_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/grey_blue"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />



</LinearLayout>