<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    android:backgroundTint="#FFFFFF"
    android:fitsSystemWindows="true"
    android:foregroundTint="#164863"
    android:orientation="vertical"
    tools:context=".activity.UserActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/app_name"
                android:textColor="@color/grey_blue"
                android:textSize="30sp" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/cyan"
            android:orientation="vertical">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="25sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_user"
                app:civ_border_color="#FFFFFFFF"
                app:civ_border_width="2dp" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="#213944"
            app:hintTextColor="@color/grey_blue">

            <EditText
                android:id="@+id/profile_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:foregroundTint="#164863"
                android:hint="@string/enter_name"
                android:minHeight="50dp"
                android:padding="4dp"
                android:text="User name"
                android:textColor="#164863"
                android:textColorHighlight="#164863"
                android:textColorHint="#546E7A"
                android:textColorLink="#164863"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/profile_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:hint="Email"
                android:minHeight="48dp"
                android:padding="4dp"
                android:text="User email" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/grey_blue" />

        <Button
            android:id="@+id/bthSetChanges"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/save_changes"
            android:textColor="@color/dark_blue" />

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>