<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/auth_login"
    tools:context=".activity.AuthActivity">

    <TextView
        android:id="@+id/label_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="Hello! Sign in!"
        android:textColor="@color/grey_blue"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:boxStrokeColor="#213944"
        app:hintTextColor="@color/grey_blue"
        app:counterEnabled="true"
        app:counterMaxLength="30">

        <EditText
            android:id="@+id/userEMailAuth"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#808080" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:boxStrokeColor="#213944"
        app:hintTextColor="@color/grey_blue"
        app:counterEnabled="true"
        app:counterMaxLength="18"
        app:passwordToggleEnabled="true"
        app:passwordToggleContentDescription="Toggle password visibility">

        <EditText
            android:id="@+id/userPasswordAuth"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#808080" />

    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_progress_bar"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonAuth"
        android:layout_gravity="center"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#DDF2FD"
        android:backgroundTint="@color/grey_blue"/>

    <TextView
        android:id="@+id/label_link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/grey_blue"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />


</LinearLayout>