<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChatActivity"
    android:orientation="vertical"
    android:id="@+id/drawer_layout"
    android:background="@color/light_yellow">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu"
        android:layout_gravity="start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textSize="30sp"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/grey_blue"
            android:id="@+id/app_title"/>

    </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/chat_currentuser_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_profile" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/chat_comment_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:ems="15"
                    android:hint="@string/write_message"
                    android:inputType="textPersonName"
                    android:maxEms="15"
                    android:minHeight="48dp"
                    android:textColorHint="#546E7A"
                    android:autofillHints=""/>

                <Button
                    android:id="@+id/chat_add_comment_btn"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/grey_blue"
                    android:text="@string/add"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:elevation="8dp"
            android:layout_marginBottom="4dp"
            />


        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/chat_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorColor="@color/grey_blue"/>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_comment"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:scrollbarSize="3dp"
            android:scrollbarThumbVertical="@color/grey_blue"/>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>